New project structure with a common library

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
 
-project("epyks-server-static")
+project("epyks-client-static")
 
 enable_language(CXX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall --std=c++17")
@@ -8,10 +8,10 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -DDEBUG")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -g -DNDEBUG")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(HEADERS )
-set(SOURCES main.cpp)
+set(CLIENT_HEADERS )
+set(CLIENT_SOURCES main.cpp)
 
 include_directories(${CMAKE_SOURCE_DIR})
 
-add_library(epyks-server-static STATIC ${HEADERS} ${SOURCES})
+add_library(epyks-client-static STATIC ${CLIENT_HEADERS} ${CLIENT_SOURCES})
 
