--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "server/miniupnp"]
-	path = server/miniupnp
+[submodule "miniupnp"]
+	path = miniupnp
 	url = https://github.com/miniupnp/miniupnp
